[package]
name = "sorted_set_nif"
version = "1.1.0"
authors = []
edition = "2018"

[lib]
name = "sorted_set_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jemalloc-info = "0.3"
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls", "stats"] }
rustler = "0.22.0"
