[package]
name = "sorted_set_nif"
version = "1.3.0"
authors = []
edition = "2024"

[lib]
name = "sorted_set_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jemalloc-info = { git = "https://github.com/marinac-dev/jemalloc_info" }
jemallocator = { version = "0.5.4", features = [
  "disable_initial_exec_tls",
  "stats",
] }
rustler = "0.36.2"
