[package]
name = "sorted_set_nif"
version = "1.2.0"
authors = []
edition = "2018"

[lib]
name = "sorted_set_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jemalloc-info = "0.6"
jemallocator = { version = "0.5.4", features = ["disable_initial_exec_tls", "stats"] }
rustler = "0.37.0"
